# harmony

./: Console.hs  Main.hs  appkey.c  harmony.cabal
Config/: Playlist.hs
Console/: Args.hs  Debug.hs
Control/: Error.hs
Spotify/: Appkey.hs  Audio.hs  Config.hs  Error.hs  Link.hs  Playlist.hs  Session.hs  Track.hs
